refactor: remove messaging notifications and new post sidebar shortcut
